--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "@popperjs/core": "^2.11.8",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
