--- a/scripts/services/droid.service
+++ b/scripts/services/droid.service
@@ -1,12 +1,16 @@
 [Unit]
 Description=Droid Service
-After=network.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
+Type=simple
+User=pi
 WorkingDirectory=/home/pi/Droid
 ExecStart=/home/pi/Droid/scripts/run_droid_service.sh
 ExecStop=/bin/kill -s TERM $MAINPID
 Restart=on-failure
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
